testdata/adhoc.reject.out
type error: no instance of 'Component on ???
in testdata/adhoc.reject.lc:4:5:
x = one :: Vec 4 A
    ^^^

------------ trace
'A :: [32mType[0m
A :: [32m'A[0m
'ACase :: [32m([32ma[0;32m : 'A->Type) -> [32m[32ma[0;32m [32mA[0;32m[0;32m -> ([32mb[0;32m:'A) -> [32m[32ma[0;32m [32m[32mb[0;32m[0;32m[0;32m[0m
match'A :: [32m([32ma[0;32m : Type->Type) -> [32m[32ma[0;32m [32m'A[0;32m[0;32m -> ([32mb[0;32m:Type) -> [32m[32ma[0;32m [32m[32mb[0;32m[0;32m[0;32m -> [32m[32ma[0;32m [32m[32mb[0;32m[0;32m[0;32m[0m
!type error: no instance of 'Component on ???
in testdata/adhoc.reject.lc:4:5:
x = one :: Vec 4 A
    ^^^

------------ tooltips
testdata/adhoc.reject.lc 2:6-2:7  Type
testdata/adhoc.reject.lc 2:6-2:11  Type
testdata/adhoc.reject.lc 2:10-2:11  A
testdata/adhoc.reject.lc 4:5-4:8  {a} -> {_ : Component a}->a
testdata/adhoc.reject.lc 4:12-4:15  Nat -> Type->Type
testdata/adhoc.reject.lc 4:12-4:17  Type->Type
testdata/adhoc.reject.lc 4:12-4:19  Type
testdata/adhoc.reject.lc 4:16-4:17  b_
testdata/adhoc.reject.lc 4:18-4:19  Type
